log
Thu, Mar 27, 2025  1:43:21 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  1:44:26 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
47d5e2f
Thu, Mar 27, 2025  1:56:04 PM: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c7c68c9
Thu, Mar 27, 2025  2:03:08 PM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
4b328e4
Thu, Mar 27, 2025  2:05:23 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
6b86c16
Thu, Mar 27, 2025  2:07:04 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5c40ba5
Thu, Mar 27, 2025  2:16:58 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
7818919
